# proto-wasm-test

./: Cargo.toml  LICENSE_MIT  Makefile  test.js
src/: lib.rs  main.rs
