[package]
name = "proto-wasm-test"
version = "0.1.0"
authors = ["Pierre Guillaume Herveou <pgherveou@lyft.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytes = "0.6.0"
glob = "0.3.0"
protofish = "0.2.5"
serde = "1.0.118"
wasm-bindgen = "0.2.63"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

